# space-traders-rust-cli

./: Cargo.toml  DOCUMENTATION.md  README.md
src/: api.rs  domain.rs  lib.rs  main.rs
tests/: auth.rs  cli.rs
