[package]
name = "space_traders_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
app_dirs2 = "2.5.5"
strum = "0.25"
strum_macros = "0.25"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
rand = "0.8.5"
assert_fs = "1.0.13"
mockito = "1.1.0"
